@@ -16,6 +16,9 @@ update-manager (1:0.133.7) UNRELEASED; urgency=low
       (needed on hardy cdrom only upgrades)
   * check-new-release-gtk:
     - fix "ask me later" button time
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - fix 386 kernel check/transition on upgrades from hardy
+    - move kubuntu-kde4-desktop transition into its own function
 
   [ Dustin Kirkland ]
   * debian/91-release-upgrade: do the release upgrade check with the
